--- a/config.conf
+++ b/config.conf
@@ -1,15 +1,14 @@
     Dataset{
         # dataset path
-        "dataset_name": "PIQ2023",
+        "dataset_name": "GFIQA",
 
-        # PIQ
-        "PIQ_path": "/work/jimmy3505090/GFIQA-20k_out/CGFIQA/image-all", 
-        "PIQ_label": '/work/jimmy3505090/GFIQA-20k_out/CGFIQA/image-all',
+        # CGFIQA
+        "CGFIQA_path": "./dataset/CGFIQA/",
+        "CGFIQA_label": "./dataset/CGFIQA/mos_val_rating.csv",
 
         # GFIQA
-        "GFIQA_path": "../GFIQA-20k/",
-        "GFIQA_label": "../GFIQA-20k/mos_val_rating.csv",
-
+        "GFIQA_path": "./dataset/GFIQA/",
+        "GFIQA_label": "./dataset/GFIQA/mos_val_rating.csv",
     }
 
     Train{    
@@ -19,7 +18,7 @@
         "learning_rate": 1e-5,
         "learning_rate_DE": 3e-5,
         "weight_decay": 1e-5,
-        "n_epoch_DE": 3000,
+        "n_epoch_DE": 100,
         "n_epoch_iqa": 500,
         "val_freq": 1,
         "test_freq": 1,
@@ -77,13 +76,13 @@
 
     IO{    
         # load & save checkpoint
-        "model_name": "koniq10k-base_s20",
-        "type_name": "Koniq10k",
+        "model_name": "GFIQA",
+        "type_name": "GFIQA",
         "ckpt_path": "./output/models/",               # directory for saving checkpoint
         "log_path": "./output/log/",
         "log_file": ".log",
         "tensorboard_path": "./output/tensorboard/",
-        "DE_pretrained_path": "./exp/2048q/ckpt/",
-        "iqa_pretrained_path": "./exp/model_256q_aug/ckpt/Val_018_SRCC0.9712_PLCC0.9713.pt",
+        "DE_pretrained_path": "./exp/ckpt/",
+        "iqa_pretrained_path": "./exp/",
 
     }
